--- a/js/data/locale/en/CA/dateformats.json
+++ b/js/data/locale/en/CA/dateformats.json
@@ -19,6 +19,32 @@
             "m": {
                 "s": "MM"
             }
+        },
+        "range": {
+            "c00": {
+                "s": "{sy}-{sm}-{sd}, {st} – {et}"
+            },
+            "c01": {
+                "s": "{sy}-{sm}-{sd}, {st} – {ey}-{em}-{ed}, {et}"
+            },
+            "c02": {
+                "s": "{sy}-{sm}-{sd}, {st} – {ey}-{em}-{ed}, {et}"
+            },
+            "c03": {
+                "s": "{sy}-{sm}-{sd}, {st} – {ey}-{em}-{ed}, {et}"
+            },
+            "c10": {
+                "s": "{sy}-{sm}-{sd} – {ed}"
+            },
+            "c11": {
+                "s": "{sy}-{sm}-{sd} – {ey}-{em}-{ed}"
+            },
+            "c12": {
+                "s": "{sy}-{sm}-{sd} – {ey}-{em}-{ed}"
+            },
+            "c20": {
+                "s": "{sy}-{sm} – {ey}-{em}"
+            }
         }
-    }
+    }   
 }
