--- a/js/data/locale/ko/sysres.json
+++ b/js/data/locale/ko/sysres.json
@@ -89,7 +89,7 @@
     "1#1 week|#{num} weeks": "#{num}주",
     "1#1 month|#{num} months": "#{num}개월",
     "1#1 year|#{num} years": "#{num}년",
-    "#{num} ms": "#{num}ms",
+    "#{num} ms": "#{num}밀리초",
     "1#1 sec|#{num} sec": "#{num}초",
     "1#1 min|#{num} min": "#{num}분",
     "1#1 hr|#{num} hrs": "#{num}시간",
@@ -97,7 +97,7 @@
     "1#1 wk|#{num} wks": "#{num}주",
     "1#1 mon|#{num} mons": "#{num}개월",
     "1#1 yr|#{num} yrs": "#{num}년",
-    "durationShortMillis": "#{num}ms",
+    "durationShortMillis": "#{num}밀리초",
     "#{num}s": "#{num}초",
     "durationShortMinutes": "#{num}분",
     "#{num}h": "#{num}시간",
