--- a/js/data/locale/ur/IN/dateformats.json
+++ b/js/data/locale/ur/IN/dateformats.json
@@ -68,16 +68,16 @@
                 "h": "h",
                 "m": "mm",
                 "s": "ss",
-                "ah": "‏h a",
+                "ah": "‏h ‫a",
                 "hm": "‏h:mm",
                 "ms": "mm:ss",
-                "ahm": "‏h:mm a",
+                "ahm": "‏h:mm ‫a",
                 "hms": "‏h:mm:ss",
                 "hmz": "‏h:mm z",
-                "ahmz": "‏h:mm a z",
-                "ahms": "‏h:mm:ss a",
+                "ahmz": "‏h:mm ‫a z",
+                "ahms": "‏h:mm:ss ‫a",
                 "hmsz": "‏h:mm:ss z",
-                "ahmsz": "‏h:mm:ss a z"
+                "ahmsz": "‏h:mm:ss ‫a z"
             },
             "24": {
                 "h": "HH",
