--- a/js/data/locale/zh/Hant/HK/ctrynames.json
+++ b/js/data/locale/zh/Hant/HK/ctrynames.json
@@ -1,222 +1,76 @@
 {
-    "亞洲": "142",
-    "中亞": "143",
-    "西亞": "145",
-    "歐洲": "150",
-    "東歐": "151",
-    "北歐": "154",
-    "西歐": "155",
-    "東非": "014",
-    "非洲南部": "018",
-    "北美": "021",
     "加勒比": "029",
-    "東亞": "030",
-    "南亞": "034",
-    "東南亞": "035",
-    "南歐": "039",
-    "澳洲與紐西蘭": "053",
-    "美拉尼西亞": "054",
-    "密克羅尼西亞": "057",
     "波利尼西亞": "061",
-    "阿森松島": "AC",
-    "安道爾": "AD",
     "阿拉伯聯合酋長國": "AE",
     "安提瓜和巴布達": "AG",
-    "阿爾巴尼亞": "AL",
-    "亞美尼亞": "AM",
-    "南極洲": "AQ",
-    "美屬薩摩亞": "AS",
-    "奧地利": "AT",
-    "澳洲": "AU",
     "阿魯巴": "AW",
-    "奧蘭群島": "AX",
     "波斯尼亞和黑塞哥維那": "BA",
-    "孟加拉": "BD",
-    "比利時": "BE",
     "布基納法索": "BF",
-    "保加利亞": "BG",
     "貝寧": "BJ",
     "聖巴泰勒米": "BL",
-    "百慕達": "BM",
-    "汶萊": "BN",
-    "玻利維亞": "BO",
-    "荷蘭加勒比區": "BQ",
-    "巴哈馬": "BS",
     "鮑威特島": "BV",
     "博茨瓦納": "BW",
-    "白俄羅斯": "BY",
     "伯利茲": "BZ",
     "可可斯群島": "CC",
-    "剛果（金夏沙）": "CD",
-    "中非共和國": "CF",
-    "剛果（布拉薩）": "CG",
-    "庫克群島": "CK",
-    "喀麥隆": "CM",
-    "中國": "CN",
-    "哥倫比亞": "CO",
     "克里珀頓島": "CP",
     "哥斯達黎加": "CR",
-    "庫拉索": "CW",
-    "聖誕島": "CX",
-    "捷克共和國": "CZ",
-    "德國": "DE",
-    "迪亞哥加西亞島": "DG",
-    "丹麥": "DK",
-    "多明尼加共和國": "DO",
-    "阿爾及利亞": "DZ",
-    "休達與梅利利亞": "EA",
     "厄瓜多爾": "EC",
-    "愛沙尼亞": "EE",
     "厄立特里亞": "ER",
     "埃塞俄比亞": "ET",
-    "歐盟": "EU",
-    "芬蘭": "FI",
-    "斐濟": "FJ",
-    "福克蘭群島": "FK",
-    "密克羅尼西亞群島": "FM",
-    "法羅群島": "FO",
-    "法國": "FR",
-    "英國": "GB",
     "格林納達": "GD",
     "格魯吉亞": "GE",
-    "法屬圭亞那": "GF",
-    "根息": "GG",
     "加納": "GH",
-    "直布羅陀": "GI",
-    "格陵蘭": "GL",
     "岡比亞": "GM",
-    "幾內亞": "GN",
-    "瓜地洛普": "GP",
-    "赤道幾內亞": "GQ",
-    "希臘": "GR",
     "南佐治亞島與南桑威奇群島": "GS",
     "危地馬拉": "GT",
-    "關島": "GU",
     "幾內亞比紹": "GW",
     "圭亞那": "GY",
-    "中國香港特別行政區": "HK",
-    "赫德島和麥克唐納群島": "HM",
     "克羅地亞": "HR",
-    "加那利群島": "IC",
-    "印尼": "ID",
-    "愛爾蘭": "IE",
     "馬恩島": "IM",
-    "英屬印度洋領地": "IO",
-    "冰島": "IS",
-    "澤西島": "JE",
-    "牙買加": "JM",
-    "約旦": "JO",
     "肯雅": "KE",
-    "吉爾吉斯": "KG",
-    "吉里巴斯": "KI",
     "科摩羅": "KM",
     "聖基茨和尼維斯": "KN",
-    "北韓": "KP",
-    "南韓": "KR",
-    "開曼群島": "KY",
-    "哈薩克": "KZ",
     "老撾": "LA",
     "聖盧西亞": "LC",
-    "斯里蘭卡": "LK",
     "利比里亞": "LR",
     "萊索托": "LS",
-    "盧森堡": "LU",
-    "拉脫維亞": "LV",
-    "利比亞": "LY",
-    "摩納哥": "MC",
-    "摩爾多瓦": "MD",
-    "法屬聖馬丁": "MF",
-    "馬達加斯加": "MG",
-    "馬紹爾群島": "MH",
-    "馬其頓": "MK",
     "馬里": "ML",
-    "緬甸": "MM",
-    "中國澳門特別行政區": "MO",
-    "北馬里亞納群島": "MP",
-    "馬丁尼克島": "MQ",
     "毛里塔尼亞": "MR",
     "馬耳他": "MT",
     "毛里裘斯": "MU",
     "馬爾代夫": "MV",
     "馬拉維": "MW",
-    "馬來西亞": "MY",
-    "納米比亞": "NA",
-    "新喀里多尼亞": "NC",
     "尼日爾": "NE",
-    "諾福克島": "NF",
     "尼日利亞": "NG",
-    "荷蘭": "NL",
-    "尼泊爾": "NP",
     "瑙魯": "NR",
-    "紐埃島": "NU",
-    "紐西蘭": "NZ",
-    "巴拿馬": "PA",
-    "秘魯": "PE",
     "法屬波利尼西亞": "PF",
     "巴布亞新幾內亞": "PG",
-    "菲律賓": "PH",
-    "波蘭": "PL",
-    "聖皮埃爾和密克隆群島": "PM",
     "皮特凱恩島": "PN",
     "巴勒斯坦領土": "PS",
-    "帛琉": "PW",
     "卡塔爾": "QA",
-    "大洋洲邊疆群島": "QO",
-    "留尼旺": "RE",
-    "羅馬尼亞": "RO",
-    "塞爾維亞": "RS",
-    "俄羅斯": "RU",
     "盧旺達": "RW",
     "沙地阿拉伯": "SA",
     "所羅門群島": "SB",
     "塞舌爾": "SC",
-    "蘇丹": "SD",
-    "聖赫勒拿島": "SH",
     "斯洛文尼亞": "SI",
     "斯瓦爾巴特群島及揚馬延島": "SJ",
-    "聖馬利諾": "SM",
-    "塞內加爾": "SN",
     "索馬里": "SO",
     "蘇里南": "SR",
-    "南蘇丹": "SS",
     "聖多美和普林西比": "ST",
-    "薩爾瓦多": "SV",
-    "荷屬聖馬丁": "SX",
     "敍利亞": "SY",
     "斯威士蘭": "SZ",
-    "特里斯坦達庫尼亞群島": "TA",
     "特克斯和凱科斯群島": "TC",
     "法屬南部領地": "TF",
     "多哥共和國": "TG",
-    "泰國": "TH",
-    "塔吉克": "TJ",
-    "托克勞群島": "TK",
-    "東帝汶": "TL",
-    "土庫曼": "TM",
-    "突尼西亞": "TN",
     "湯加": "TO",
     "千里達和多巴哥": "TT",
     "圖瓦盧": "TV",
-    "台灣": "TW",
     "坦桑尼亞": "TZ",
-    "烏克蘭": "UA",
-    "烏干達": "UG",
-    "美國本土外小島嶼": "UM",
-    "聯合國": "UN",
-    "美國": "US",
-    "烏拉圭": "UY",
-    "烏茲別克": "UZ",
-    "梵蒂岡": "VA",
     "聖文森特和格林納丁斯": "VC",
-    "委內瑞拉": "VE",
     "英屬維爾京群島": "VG",
     "美屬維爾京群島": "VI",
     "瓦努阿圖": "VU",
-    "瓦利斯群島和富圖那群島": "WF",
-    "薩摩亞": "WS",
     "也門": "YE",
-    "馬約特": "YT",
     "贊比亞": "ZM",
-    "津巴布韋": "ZW",
-    "未知區域": "ZZ"
+    "津巴布韋": "ZW"
 }
