--- a/js/data/locale/ku/dateformats.json
+++ b/js/data/locale/ku/dateformats.json
@@ -2,32 +2,32 @@
     "gregorian": {
         "date": {
             "dmwy": {
-                "s": "EE,  dd/M/yyyy",
-                "m": "EEE, dd/MM/yyyy",
+                "s": "EE,  dd‏/M‏/yyyy",
+                "m": "EEE, dd‏/MM‏/yyyy",
                 "l": "EEE, yyyy/MMMM/dd",
                 "f": "EEEE, yyyy/MMMM/dd"
             },
             "dmy": {
-                "s": "‏dd/M/yyyy",
-                "m": "‏dd/MM/yyyy",
+                "s": "‏dd‏/M‏/yyyy",
+                "m": "‏dd‏/MM‏/yyyy",
                 "l": "‏yyyy/MMMM/dd",
                 "f": "‏yyyy/MMMM/dd"
             },
             "dmw": {
-                "s": "EE, dd/M",
-                "m": "EEE, dd/MM",
+                "s": "EE, dd‏/M",
+                "m": "EEE, dd‏/MM",
                 "l": "EEE, MMMM/dd",
                 "f": "EEEE,MMMM/dd"
             },
             "dm": {
-                "s": "‏dd/M",
-                "m": "‏dd/MM",
+                "s": "‏dd‏/M",
+                "m": "‏dd‏/MM",
                 "l": "‏MMMM/dd",
                 "f": "‏MMMM/dd"
             },
             "my": {
-                "s": "‏M/yyyy",
-                "m": "‏MM/yyyy",
+                "s": "‏M‏/yyyy",
+                "m": "‏MM‏/yyyy",
                 "l": "‏yyyy/MMMM",
                 "f": "‏yyyy/MMMM"
             },
@@ -76,50 +76,50 @@
         },
         "range": {
             "c00": {
-                "s": "‏{sd}/{sm}/{sy} {st} – {et}",
-                "m": "‏{sd}/{sm}/{sy} {st} – {et}",
+                "s": "‏{sd}‏/{sm}‏/{sy} {st} – {et}",
+                "m": "‏{sd}‏/{sm}‏/{sy} {st} – {et}",
                 "l": "‏{sy}/{sm}/{sd} {st} – {et}",
                 "f": "‏{sy}/{sm}/{sd} {st} – {et}"
             },
             "c01": {
-                "s": "‏{sd}/{sm}/{sy} {st} – {ed}/{em}/{ey} {et}",
-                "m": "‏{sd}/{sm}/{sy} {st} – {ed}/{em}/{ey} {et}",
+                "s": "‏{sd}‏/{sm}‏/{sy} {st} – {ed}‏/{em}‏/{ey} {et}",
+                "m": "‏{sd}‏/{sm}‏/{sy} {st} – {ed}‏/{em}‏/{ey} {et}",
                 "l": "‏{sy}/{sm}/{sd} {st} – {ey}/{em}/{ed} {et}",
                 "f": "‏{sy}/{sm}/{sd} {st} – {ey}/{em}/{ed} {et}"
             },
             "c02": {
-                "s": "‏{sd}/{sm}/{sy} {st} – {ed}/{em}/{ey} {et}",
-                "m": "‏{sd}/{sm}/{sy} {st} – {ed}/{em}/{ey} {et}",
+                "s": "‏{sd}‏/{sm}‏/{sy} {st} – {ed}‏/{em}‏/{ey} {et}",
+                "m": "‏{sd}‏/{sm}‏/{sy} {st} – {ed}‏/{em}‏/{ey} {et}",
                 "l": "‏{sy}/{sm}/{sd} {st} – {ey}/{em}/{ed} {et}",
                 "f": "‏{sy}/{sm}/{sd} {st} – {ey}/{em}/{ed} {et}"
             },
             "c03": {
-                "s": "‏{sd}/{sm}/{sy} {st} – {ed}/{em}/{ey} {et}",
-                "m": "‏{sd}/{sm}/{sy} {st} – {ed}/{em}/{ey} {et}",
+                "s": "‏{sd}‏/{sm}‏/{sy} {st} – {ed}‏/{em}‏/{ey} {et}",
+                "m": "‏{sd}‏/{sm}‏/{sy} {st} – {ed}‏/{em}‏/{ey} {et}",
                 "l": "‏{sy}/{sm}/{sd} {st} – {ey}/{em}/{ed} {et}",
                 "f": "‏{sy}/{sm}/{sd} {st} – {ey}/{em}/{ed} {et}"
             },
             "c10": {
-                "s": "‏{sd} – {ed}/{em}/{ey}",
-                "m": "‏{sd} – {ed}/{em}/{ey}",
+                "s": "‏{sd} – {ed}‏/{em}‏/{ey}",
+                "m": "‏{sd} – {ed}‏/{em}‏/{ey}",
                 "l": "‏{sy}/{sm}/{sd} – {ed}",
                 "f": "‏{sy}/{sm}/{sd} – {ed}"
             },
             "c11": {
-                "s": "‏{sd}/{sm} – {ed}/{em}/{ey}",
-                "m": "‏{sd}/{sm} – {ed}/{em}/{ey}",
+                "s": "‏{sd}‏/{sm} – {ed}‏/{em}‏/{ey}",
+                "m": "‏{sd}‏/{sm} – {ed}‏/{em}‏/{ey}",
                 "l": "‏{sy}/{sm}/{sd} – {em}/{ed}",
                 "f": "‏{sy}/{sm}/{sd} – {em}/{ed}"
             },
             "c12": {
-                "s": "‏{sd}/{sm}/{sy} – {ed}/{em}/{ey}",
-                "m": "‏{sd}/{sm}/{sy} – {ed}/{em}/{ey}",
+                "s": "‏{sd}‏/{sm}‏/{sy} – {ed}‏/{em}‏/{ey}",
+                "m": "‏{sd}‏/{sm}‏/{sy} – {ed}‏/{em}‏/{ey}",
                 "l": "‏{sy}/{sm}/{sd} – {ey}/{em}/{ed}",
                 "f": "‏{sy}/{sm}/{sd} – {ey}/{em}/{ed}"
             },
             "c20": {
-                "s": "‏{sm}/{sy} – {em}/{ey}",
-                "m": "‏{sm}/{sy} – {em}/{ey}",
+                "s": "‏{sm}‏/{sy} – {em}‏/{ey}",
+                "m": "‏{sm}‏/{sy} – {em}‏/{ey}",
                 "l": "‏{sy}/{sm} – {ey}/{em}",
                 "f": "‏{sy}/{sm} – {ey}/{em}"
             },
