--- a/js/data/locale/pa/Arab/dateformats.json
+++ b/js/data/locale/pa/Arab/dateformats.json
@@ -6,31 +6,31 @@
                 "f": "EEEE, dd MMMM yyyy",
                 "l": "EEE, d MMMM yyyy",
                 "m": "EE, d MMM yyyy",
-                "s": "E, dd/MM/yyyy"
+                "s": "E,‏dd‏/MM‏/yyyy"
             },
             "dmy": {
-                "f": "dd MMMM yyyy",
-                "l": "d MMMM yyyy",
-                "m": "d MMM yyyy",
-                "s": "dd/MM/yyyy"
+                "f": "‏dd MMMM yyyy",
+                "l": "‏d MMMM yyyy",
+                "m": "‏d MMM yyyy",
+                "s": "‏dd‏/MM‏/yyyy"
             },
             "dmw": {
-                "f": "EEEE, dd MMMM",
-                "l": "EEE, d MMMM",
-                "m": "EE, d MMM",
-                "s": "E, dd/MM"
+                "f": "EEEE, ‏dd MMMM",
+                "l": "EEE, ‏d MMMM",
+                "m": "EE, ‏d MMM",
+                "s": "E, ‏dd‏/MM"
             },
             "dm": {
-                "f": "dd MMMM",
-                "l": "d MMMM",
-                "m": "d MMM",
-                "s": "dd/MM"
+                "f": "‏dd MMMM",
+                "l": "‏d MMMM",
+                "m": "‏d MMM",
+                "s": "‏dd‏/MM"
             },
             "my": {
                 "f": "MMMM yyyy",
                 "l": "MMMM yyyy",
                 "m": "MMM yyyy",
-                "s": "MM/yyyy"
+                "s": "‏MM‏/yyyy"
             },
             "dw": {
                 "f": "EEEE, dd",
@@ -97,58 +97,58 @@
         },
         "range": {
             "c00": {
-                "f": "{sd} {sm} {sy} {st} – {et}",
-                "l": "{sd} {sm} {sy} {st} – {et}",
-                "m": "{sd} {sm} {sy} {st} – {et}",
-                "s": "{sd}/{sm}/{sy} {st} – {et}"
+                "f": "‏{sd} {sm} {sy} {st} – {et}",
+                "l": "‏{sd} {sm} {sy} {st} – {et}",
+                "m": "‏{sd} {sm} {sy} {st} – {et}",
+                "s": "‏{sd}‏/{sm}‏/{sy} {st} – {et}"
             },
             "c01": {
-                "f": "{sd} {sm} {sy} {st} – {ed} {em} {ey} {et}",
-                "l": "{sd} {sm} {sy} {st} – {ed} {em} {ey} {et}",
-                "m": "{sd} {sm} {sy} {st} – {ed} {em} {ey} {et}",
-                "s": "{sd}/{sm}/{sy} {st} – {ed}/{em}/{ey} {et}"
+                "f": "‏{sd} {sm} {sy} {st} – {ed} {em} {ey} {et}",
+                "l": "‏{sd} {sm} {sy} {st} – {ed} {em} {ey} {et}",
+                "m": "‏{sd} {sm} {sy} {st} – {ed} {em} {ey} {et}",
+                "s": "‏{sd}‏/{sm}‏/{sy} {st} – {ed}‏/{em}‏/{ey} {et}"
             },
             "c02": {
-                "f": "{sd} {sm} {sy} {st} – {ed} {em} {ey} {et}",
-                "l": "{sd} {sm} {sy} {st} – {ed} {em} {ey} {et}",
-                "m": "{sd} {sm} {sy} {st} – {ed} {em} {ey} {et}",
-                "s": "{sd}/{sm}/{sy} {st} – {ed}/{em}/{ey} {et}"
+                "f": "‏{sd} {sm} {sy} {st} – {ed} {em} {ey} {et}",
+                "l": "‏{sd} {sm} {sy} {st} – {ed} {em} {ey} {et}",
+                "m": "‏{sd} {sm} {sy} {st} – {ed} {em} {ey} {et}",
+                "s": "‏{sd}‏/{sm}‏/{sy} {st} – {ed}‏/{em}‏/{ey} {et}"
             },
             "c03": {
-                "f": "{sd} {sm} {sy} {st} – {ed} {em} {ey} {et}",
-                "l": "{sd} {sm} {sy} {st} – {ed} {em} {ey} {et}",
-                "m": "{sd} {sm} {sy} {st} – {ed} {em} {ey} {et}",
-                "s": "{sd}/{sm}/{sy} {st} – {ed}/{em}/{ey} {et}"
+                "f": "‏{sd} {sm} {sy} {st} – {ed} {em} {ey} {et}",
+                "l": "‏{sd} {sm} {sy} {st} – {ed} {em} {ey} {et}",
+                "m": "‏{sd} {sm} {sy} {st} – {ed} {em} {ey} {et}",
+                "s": "‏{sd}‏/{sm}‏/{sy} {st} – {ed}‏/{em}‏/{ey} {et}"
             },
             "c10": {
-                "f": "{sd} – {ed} {em} {ey}",
-                "l": "{sd} – {ed} {em} {ey}",
-                "m": "{sd} – {ed} {em} {ey}",
-                "s": "{sd} – {ed}/{em}/{ey}"
+                "f": "‏{sd} – {ed} {em} {ey}",
+                "l": "‏{sd} – {ed} {em} {ey}",
+                "m": "‏{sd} – {ed} {em} {ey}",
+                "s": "‏{sd} – {ed}‏/{em}‏/{ey}"
             },
             "c11": {
-                "f": "{sd} {sm} – {ed} {em} {ey}",
-                "l": "{sd} {sm} – {ed} {em} {ey}",
-                "m": "{sd} {sm} – {ed} {em} {ey}",
-                "s": "{sd}/{sm} – {ed}/{em}/{ey}"
+                "f": "‏{sd} {sm} – {ed} {em} {ey}",
+                "l": "‏{sd} {sm} – {ed} {em} {ey}",
+                "m": "‏{sd} {sm} – {ed} {em} {ey}",
+                "s": "‏{sd}‏/{sm} – {ed}‏/{em}‏/{ey}"
             },
             "c12": {
-                "f": "{sd} {sm} {sy} – {ed} {em} {ey}",
-                "l": "{sd} {sm} {sy} – {ed} {em} {ey}",
-                "m": "{sd} {sm} {sy} – {ed} {em} {ey}",
-                "s": "{sd}/{sm}/{sy} – {ed}/{em}/{ey}"
+                "f": "‏{sd} {sm} {sy} – {ed} {em} {ey}",
+                "l": "‏{sd} {sm} {sy} – {ed} {em} {ey}",
+                "m": "‏{sd} {sm} {sy} – {ed} {em} {ey}",
+                "s": "‏{sd}‏/{sm}‏/{sy} – {ed}‏/{em}‏/{ey}"
             },
             "c20": {
-                "f": "{sm} {sy} – {em} {ey}",
-                "l": "{sm} {sy} – {em} {ey}",
-                "m": "{sm} {sy} – {em} {ey}",
-                "s": "{sm}/{sy} – {em}/{ey}"
+                "f": "‏{sm} {sy} – {em} {ey}",
+                "l": "‏{sm} {sy} – {em} {ey}",
+                "m": "‏{sm} {sy} – {em} {ey}",
+                "s": "‏{sm}‏/{sy} – {em}‏/{ey}"
             },
             "c30": {
-                "f": "{sy} – {ey}",
-                "l": "{sy} – {ey}",
-                "m": "{sy} – {ey}",
-                "s": "{sy} – {ey}"
+                "f": "‏{sy} – {ey}",
+                "l": "‏{sy} – {ey}",
+                "m": "‏{sy} – {ey}",
+                "s": "‏{sy} – {ey}"
             }
         }
     }
