--- a/js/data/locale/ur/IN/sysres.json
+++ b/js/data/locale/ur/IN/sysres.json
@@ -97,8 +97,8 @@
     "1#1 wk|#{num} wks": "one#{num} ہفتہ|#{num} ہفتے",
     "1#1 mon|#{num} mons": "one#{num} مہینہ|#{num} مہینے",
     "1#1 yr|#{num} yrs": "one#{num} سال|#{num} سال",
-    "durationShortMillis": "one#{num} ms|#{num} ms",
-    "#{num}s": "one#{num}s|#{num}s",
+    "durationShortMillis": "one#{num} ‏ms|#{num} ‏ms",
+    "#{num}s": "one#{num}‏s|#{num}‏s",
     "durationShortMinutes": "one#{num} منٹ|#{num} منٹ",
     "#{num}h": "one#{num} گھنٹہ|#{num} گھنٹے",
     "#{num}d": "one#{num} دن|#{num} دن",
