--- a/js/data/locale/zoneinfo/Antarctica/Casey.json
+++ b/js/data/locale/zoneinfo/Antarctica/Casey.json
@@ -1,6 +1,6 @@
 {
-    "f": "+08",
-    "o": "8:0",
+    "f": "+11",
+    "o": "11:0",
     "c": "AQ",
-    "n": "W. Australia {c} Time"
+    "n": "Singapore {c} Time"
 }
